Dark mode now default, sizing fixes, funky blockquote

--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -1,16 +1,22 @@
 // Used in layout
 $padding-1: 1px !default;
 $padding-4: 0.25rem !default;
+$padding-6: 0.375rem !default;
 $padding-8: 0.5rem !default;
 $padding-16: 1rem !default;
 $padding-20: 1.25rem !default;
 $padding-30: 1.875rem !default;
 $padding-40: 2.5rem !default;
 
-$font-size-base: 18px !default;
-$font-size-12: 0.6rem !default;
-$font-size-14: 0.7rem !default;
-$font-size-16: 0.8rem !default;
+$font-size-base: 16px !default;
+$font-size-12: 0.75rem !default;
+$font-size-14: 0.875rem !default;
+$font-size-16: 1rem !default;
+$font-size-18: 1.125rem !default;
+$font-size-20: 1.25rem !default;
+$font-size-24: 1.5rem !default;
+$font-size-30: 1.875rem !default;
+$font-size-40: 2.5rem !default;
 
 $border-radius: $padding-4 !default;
 
@@ -57,14 +63,17 @@ $hint-colors: (
 }
 
 @mixin theme-dark {
-  --gray-100: rgba(255, 255, 255, 0.1);
+  --gray-100: rgb(58, 58, 58);
   --gray-200: rgba(255, 255, 255, 0.2);
   --gray-500: rgba(255, 255, 255, 0.5);
+  --gray-700: rgba(255, 255, 255, 0.7);
+  --raf-green: #248f79;
+  --raf-visited: #67CBB7;
 
   --color-link: #84b2ff;
   --color-visited-link: #b88dff;
 
-  --body-background: #343a40;
+  --body-background: #202429;
   --body-font-color: #e9ecef;
 
   --icon-filter: brightness(0) invert(1);
