--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -97,9 +97,10 @@
   blockquote {
     margin: $padding-16 0;
     padding: $padding-8 $padding-16 $padding-8 ($padding-16 - $padding-4); //to keep total left space 16dp
-
-    border-inline-start: $padding-4 solid var(--gray-200);
+    background-color: #293037;
+    border-inline-start: $padding-6 solid var(--raf-green);
     border-radius: $border-radius;
+    color: var(--raf-visited);
 
     :first-child {
       margin-top: 0;
